feat: model-download with batch config
